[+] fixing navigation alignment

--- a/style/main.css
+++ b/style/main.css
@@ -117,6 +117,7 @@ li a:hover {
 
 .navi .nav-top .nav-left {
 	display: flex;
+	align-items: center;
 }
 
 .navi .nav-top .ham {
